--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
   	</contributor>
   	<contributor>
   		<name>Juan Drets</name>
+		<email>jdrets@hotmail.com</email>
+  		<organization>Universidad Ort Uruguay</organization>
   	</contributor>
   </contributors>
 
