--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
     	<artifactId>annotation</artifactId>
     	<version>0.3.4</version>
 	</dependency>
+	<dependency>
+    	<groupId>io.javalin</groupId>
+    	<artifactId>javalin</artifactId>
+    <version>2.1.1</version>
+</dependency>
   </dependencies>
   <repositories>
   	<repository>
