--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.upb.fsw</groupId>
 	<artifactId>elon</artifactId>
-	<version>1.1.0</version>
+	<version>1.2.0</version>
 	<packaging>jar</packaging>
 
 	<name>elon</name>
@@ -38,6 +38,27 @@
 			<groupId>org.aksw.qa</groupId>
 			<artifactId>annotation</artifactId>
 			<version>0.3.4</version>
+		</dependency>
+		<dependency>
+		  <groupId>org.aksw.qa</groupId>
+		  <artifactId>commons</artifactId>
+		  <version>0.4.20</version>
+		</dependency>
+		<dependency>
+		    <groupId>edu.stanford.nlp</groupId>
+		    <artifactId>stanford-corenlp</artifactId>
+		    <version>3.9.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>edu.stanford.nlp</groupId>
+		    <artifactId>stanford-corenlp</artifactId>
+		    <version>3.9.1</version>
+		    <classifier>models</classifier>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-text</artifactId>
+		    <version>1.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
